# skill-evals

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: .env.example  baseline.env
examples/commit-push-pr/evals/: evals.json
examples/commit-push-pr/evals/files/: sample_change.py
examples/fix-failing-tests/evals/: evals.json
examples/fix-failing-tests/evals/files/: calculator.py  test_calculator.py
examples/review-diff/evals/: evals.json
examples/review-diff/evals/files/: changes.diff  orders.py
examples/validate-config/evals/: evals.json
examples/validate-config/evals/files/: app_config.json
examples/write-release-notes/evals/: evals.json
examples/write-release-notes/evals/files/: commits.txt
schemas/: evals.schema.json
scripts/: record-demo.sh
skills/commit-push-pr/: SKILL.md
skills/fix-failing-tests/: SKILL.md
skills/review-diff/: SKILL.md
skills/validate-config/: SKILL.md
skills/validate-config/references/: config-rules.md
skills/validate-config/scripts/: validate_config.py
skills/write-release-notes/: SKILL.md
src/agent_skill_eval/: __init__.py  __main__.py  cli.py  git_state.py  hooks.py  models.py  openrouter.py  progress.py  runner.py  skills.py  summary.py  workspace.py
src/agent_skill_eval/graders/: __init__.py
src/agent_skill_eval/harnesses/: __init__.py
src/skill_eval/: __init__.py  __main__.py  cli.py  git_state.py  models.py  runner.py  skills.py  workspace.py
src/skill_eval/graders/: __init__.py
src/skill_eval/harnesses/: __init__.py
templates/.components/: changes.md.j2
tests/: conftest.py  test_cli_smoke.py  test_e2e.py  test_feedback_features.py  test_fuzz_grader.py  test_git_state.py  test_graders.py  test_harnesses.py  test_launch_features.py  test_llm_grader.py  test_openrouter.py  test_runner.py  test_skill_validation.py  test_skills.py  test_workspace.py
tests/fixtures/evals/: format-json.json
tests/fixtures/skills/format-json/: SKILL.md
