[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-eval"
version = "0.1.0"
description = "Framework for evaluating agent skills across OpenCode, Claude Code, and Codex"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
skill-eval = "skill_eval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
