[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-eval"
version = "0.2.1"
description = "Framework for evaluating agent skills across OpenCode, Claude Code, and Codex"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "skill-eval contributors" },
]
keywords = ["agent", "evaluation", "skills", "benchmark", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/tardigrde/skill-evals"
Repository = "https://github.com/tardigrde/skill-evals"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
skill-eval = "skill_eval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
