[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-eval"
version = "0.4.1"
description = "Framework for evaluating agent skills across OpenCode, Claude Code, and Codex"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Levente Csoke", email = "leventec3@gmail.com" },
]
keywords = ["agent", "evaluation", "skills", "benchmark", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "openai>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/tardigrde/agent-skill-eval"
Repository = "https://github.com/tardigrde/agent-skill-eval"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agent-skill-eval = "agent_skill_eval.cli:app"
ase = "agent_skill_eval.cli:app"



[tool.hatch.build.targets.wheel]
packages = ["src/agent_skill_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: e2e tests that call real agent CLIs and paid APIs (needs ASE_LIVE=1)",
]
addopts = "-m 'not live'"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog]
# Insertion-only updates: new releases are inserted at the flag, the curated
# history below it is never regenerated. Templates in templates/ are the PSR
# defaults minus full commit bodies (no Co-Authored-By trailers in the log).
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"
exclude_commit_patterns = ['''chore\(release\):.*''']

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
